# echo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  claude_desktop_config.example.json  doctor.ps1
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
examples/: error_fallback_learning.md  pattern_learning.md  semantic_search_basics.md
skills/: echo-recommended-instructions.md
skills/echo/: skill.md
src/: main.rs  semantic.rs
